--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <div class="instruction">
   <p> Click the arrow below to start running some errands </p>
-  <a href="../chapters/very-idea-design-watch/index.html"> <img id="arrow" src="data/arrow.png"> </a>
+  <a href="chapters/very-idea-design-watch/index.html"> <img id="arrow" src="data/arrow.png"> </a>
 </div>
 
 
