--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,15 @@
 <body>
 <body>
      <nav>
+      <div class="left-side">
+        <a href="about.html" class="side-links" id="about"> about </a>
+        <a href="disclaimer.html" class="side-links" id="disclaimer"> disclaimer(!) </a>
+      </div>
   <a href="index.html" id="home">DESIGN * ERRANDS</a>
-  <a href="about.html" class="side-links" id="about"> about </a>
-  <a href="principles.html" class="side-links" id="principles"> principles </a>
+  <div class="right-side">
+    <a href="principles.html" class="side-links" id="principles"> principles </a>
+    <a href="conclusion.html" class="side-links" id="conclusion"> conclusion(?) </a>
+  </div>
+
 </nav>
 </body>
