--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-index.css">
+    <link rel="stylesheet" href="stylesheets/style-index.css">
+    <link rel="stylesheet" href="stylesheets/nav.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -687,7 +688,7 @@
     <a href="chapters/06_design-loops/13_owns-time.html">
         <div class="photo-container" > 
             <div class="text-container"> 
-                <p class="title"> Who owns our time?m
+                <p class="title"> Who owns our time?
                 </p>
                 <p class="location"></p>
             </div>
