--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div id="nav"> </div>
 
     <div id="photo-wall">
+
+
+
         <a href="chapters/02_prevention/02_handicap-steps.html">
         <div class="photo-container" id="202-rotana"> 
             <div class="text-container"> 
@@ -70,7 +73,15 @@
             <img src="photos/2.05_wooden-totem1.jpg">
         </div>
     </a>
-
+    
+    <a href="chapters/02_prevention/01_redesign-signage.html">
+        <div class="photo-container"> 
+            <div class="text-container"> 
+                <p class="title"> Can We Kindly Redesign All the Signage Systems in the World, Please?</p>
+                <p class="location"> </p>
+            </div>
+            <img src="photos/#">
+        </div>
 
     <a href="chapters/02_prevention/06_sleep-taboo.html">
         <div class="photo-container" > 
