--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p class="title"> Can We Kindly Redesign All the Signage Systems in the World, Please?</p>
                 <p class="location"> </p>
             </div>
-            <img src="photos/#">
+            <img src="photos/2.01_Screen Shot 2021-07-30 at 1.21.13 PM.png">
         </div>
 
     <a href="chapters/02_prevention/06_sleep-taboo.html">
@@ -176,13 +176,23 @@
         </div>
     </a>
 
+    <a href="chapters/03_honesty/02_reality-fantasy.html">
+        <div class="photo-container" > 
+            <div class="text-container"> 
+                <p class="title">  Reality check and fantasy check</p>
+                <p class="location"> Abu Dhabi, UAE </p>
+            </div>
+            <img src="photos/3.02_IMG_20210417_204604.jpg">
+        </div>
+    </a>
+
     <a href="chapters/03_honesty/03_car-park-exit.html">
         <div class="photo-container" > 
             <div class="text-container"> 
                 <p class="title"> Save time and use your credit card to pay at the car park exit</p>
                 <p class="location"> Paris, France </p>
             </div>
-            <img src="photos/#">
+            <img src="photos/3.03_exit.jpeg">
         </div>
     </a>
 
@@ -405,7 +415,7 @@
                 <p class="title"> The ambiguity of equilateral triangles </p>
                 <p class="location"> Abu Dhabi, UAE</p>
             </div>
-            <img src="photos/#">
+            <img src="photos/4.03_louvre.jpg">
         </div>
     </a>
 
@@ -445,7 +455,7 @@
                 <p class="title">Floor dance </p>
                 <p class="location"> Abu Dhabi, UAE </p>
             </div>
-            <img src="photos/#">
+            <img src="photos/4.07_IMG-20190102-WA0016.jpg">
         </div>
     </a>
 
@@ -462,7 +472,7 @@
 
     <a href="chapters/04_cognitive-advantages/09_imperative-arrow.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity: 1;" class="text-container"> 
                 <p class="title">The imperative arrow</p>
                 <p class="location"> Munich, Germany</p>
             </div>
@@ -532,7 +542,7 @@
 
     <a href="chapters/04_cognitive-advantages/16_no-smoking-signs.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">No smoking signs are appearing around campus (i.e. in the cafeteria) </p>
                 <p class="location">Abu Dhabi, UAE</p>
             </div>
@@ -563,7 +573,7 @@
 
     <a href="chapters/05_toilets/06_same-state.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">Please leave this place in the same state as you found it
                 </p>
                 <p class="location"></p>
@@ -574,7 +584,7 @@
 
     <a href="chapters/06_design-loops/01_Redundancies.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">The Mighty Power of Redundancies
                 </p>
                 <p class="location"></p>
@@ -585,7 +595,7 @@
 
     <a href="chapters/06_design-loops/02_design-inertia.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1"class="text-container"> 
                 <p class="title">Design inertia
                 </p>
                 <p class="location"></p>
@@ -607,7 +617,7 @@
 
     <a href="chapters/06_design-loops/04_designer-king.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">The designer and the King
                 </p>
                 <p class="location"></p>
@@ -618,7 +628,7 @@
 
     <a href="chapters/06_design-loops/05_doctor-in-design.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">The Doctor is InDesign
                 </p>
                 <p class="location"></p>
@@ -714,7 +724,7 @@
                 </p>
                 <p class="location">  </p>
             </div>
-            <img src="photos/#">
+            <img src="photos/6.14_Screen Shot 2021-07-30 at 10.50.06 AM.png">
         </div>
     </a>
 
@@ -833,7 +843,7 @@
                 </p>
                 <p class="location"> Paris, France </p>
             </div>
-            <img src="photos/#">
+            <img src="photos/6.24_wolf.png">
         </div>
     </a>
 
@@ -844,7 +854,7 @@
                 </p>
                 <p class="location"></p>
             </div>
-            <img src="photos/#">
+            <img src="photos/6.25_Call-Now-empty-phone-number-typo-IMG_20190526_135525.jpg">
         </div>
     </a>
 
@@ -899,7 +909,7 @@
                 </p>
                 <p class="location"></p>
             </div>
-            <img src="photos/#">
+            <img src="photos/7.05_useless-slides.png">
         </div>
     </a>
 
@@ -938,7 +948,7 @@
 
     <a href="chapters/08_affordance/03_space-perspective.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">Putting space in perspective
                 </p>
                 <p class="location"></p>
@@ -983,7 +993,7 @@
 
     <a href="chapters/08_affordance/07_perspective-shift.html">
         <div class="photo-container" > 
-            <div class="text-container"> 
+            <div style="opacity:1" class="text-container"> 
                 <p class="title">Perspectival Shift at La Maison de Radio France
                 </p>
                 <p class="location"></p>
@@ -1077,6 +1087,17 @@
                 <p class="location">Abu Dhabi, UAE</p>
             </div>
             <img src="photos/8.15_surreal1.jpg">
+        </div>
+    </a>
+
+    <a href="chapters/08_affordance/15_surrealism.html">
+        <div class="photo-container" > 
+            <div class="text-container"> 
+                <p class="title">Surrealism: the last resource against user-centered design
+                </p>
+                <p class="location">Abu Dhabi, UAE</p>
+            </div>
+            <img src="photos/8.15_Signing_Highland_F (1).jpg">
         </div>
     </a>
 
@@ -1256,27 +1277,7 @@
         </div>
     </a>
 
-    <a href="chapters/10_post-design/03_kinds-of-design.html">
-        <div class="photo-container" > 
-            <div class="text-container"> 
-                <p class="title">Kinds of design
-                </p>
-                <p class="location"></p>
-            </div>
-            <img src="photos/#">
-        </div>
-    </a>
 
-    <a href="chapters/10_post-design/04_super-duper-design.html">
-        <div class="photo-container" > 
-            <div class="text-container"> 
-                <p class="title">Super-duper design
-                </p>
-                <p class="location"></p>
-            </div>
-            <img src="photos/#">
-        </div>
-    </a>
 
 
     </div>
