--- a/principles.html
+++ b/principles.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Principles</title>
     <style>
         #principles {
     color: rgb(255, 0, 225);
