--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@ Body texts  are set in <a style="text-decoration: underline;" href="https://font
       
 
     <div id="report">
-      <div id="track">
-      <a href="report-errand.html" id="report-text">REPORT YOUR ERRANDS</a>
+      <!-- <div id="track"> -->
+      <a href="report-errand.html">REPORT YOUR ERRANDS</a>
   </div>
   
     <script src="script-index.js"></script>
