--- a/conclusion.html
+++ b/conclusion.html
@@ -74,8 +74,8 @@
     </div>
 
     <div id="report">
-      <div id="track">
-      <a href="report-errand.html" id="report-text">REPORT YOUR ERRANDS</a>
+      <!-- <div id="track"> -->
+      <a href="report-errand.html" >REPORT YOUR ERRANDS</a>
   </div>
 
     <script src="script-index.js"></script>
