--- a/disclaimer.html
+++ b/disclaimer.html
@@ -31,6 +31,7 @@
         <div class="text-block">
           <p class="title"></p>
           <p class="body-text">
+            Coming soon
           </p>
         </div>
       </div>
@@ -38,8 +39,8 @@
       
 
     <div id="report">
-      <div id="track">
-      <a href="report-errand.html" id="report-text">REPORT YOUR ERRANDS</a>
+      <!-- <div id="track"> -->
+      <a href="report-errand.html" >REPORT YOUR ERRANDS</a>
   </div>
   
     <script src="script-index.js"></script>
