--- a/index.html
+++ b/index.html
@@ -542,11 +542,11 @@
 
     <a href="chapters/04_cognitive-advantages/16_no-smoking-signs.html">
         <div class="photo-container" > 
-            <div style="opacity:1" class="text-container"> 
+            <div class="text-container"> 
                 <p class="title">No smoking signs are appearing around campus (i.e. in the cafeteria) </p>
                 <p class="location">Abu Dhabi, UAE</p>
             </div>
-            <img src="photos/#">
+            <img src="photos/THANK-NO_SMOKING.jpg">
         </div>
     </a>
 
